--- a/app/views/invoices/invoice_to_pdf.erb
+++ b/app/views/invoices/invoice_to_pdf.erb
@@ -122,7 +122,7 @@
   <div class="icentre">
     <h4>pagamento</h4>
 
-    <p>Effettuato a mezzo: <%= @invoice.pagamento %></p>
+    <p>Effettuato a mezzo: <%= @invoice.payment.pagamento %></p>
   </div>
   <br/>
   <hr>
