--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -7,11 +7,11 @@
   <p><span style="font-weight: bold;"><%= link_to " < cambia", invoice_receiver_path %></span>
     <%= raw f.text_area :destinatario,
                         :label => (:label_destinatario),
-                        :value => @dest %>  </p>
+                        :value => @invoice.destinatario %>  </p>
 
   <p><%= f.text_field :numero_fattura, :label => :field_numero_fattura, :size => 5, :required => true %>
-    <% unless @cnt.blank? %>
-        prossima fattura: <%= @cnt %> [<%= @anno %>]
+    <% unless @invoice.numero_fattura.blank? %>
+        prossima fattura: <%= @invoice.numero_fattura %> [<%= @invoice.anno %>]
     <% end %>
   </p>
   <table style="float: right; margin: -30px 30px 0 0; border: dotted 1px #a9a9a9 ">
@@ -39,16 +39,32 @@
 
   <p><%= f.text_field :sconto, :label => :field_sconto, :size => 5 %></p>
 
-  <p><%= f.text_field :iva, :value => @invoices[0].iva.to_s, :label => :field_iva, :size => 5, :required => true %></p>
+  <p><%= f.text_field :iva, :value => @invoice.iva.to_s, :label => :field_iva, :size => 5, :required => true %></p>
 
-  <p><%= f.text_field :pagamento, :label => :field_pagamento, :size => 5 %></p>
+    <p>
+      <%= f.select :payment_id, options_for_select(Payment.all.collect { |pay| [pay.name, pay.id] }, @invoices[0].payment_id), {:disabled => false, :include_blank => false, :required => true} %>
+    </p>
 
-  <p><%= f.text_field :anno, :label => :field_anno, :value => @anno.to_s, :size => 5 %></p>
+  <p><%= f.text_field :anno, :label => :field_anno, :value => @invoice.anno.to_s, :size => 5 %></p>
 
   <p><%= f.text_field :sezione, :value => @invoices[0].sezione.to_s, :label => :field_sezione, :size => 5 %></p>
 
 
 </div>
+
+<div class="box tabular">
+  <p>
+    <%= raw f.text_area :mittente,
+                        :label => (:label_mittente),
+                        :value => @invoice.mittente %>  </p>
+
+  <p>
+    <%= raw f.text_area :footer,
+                        :label => (:label_footer),
+                        :value => @invoice.footer %>  </p>
+</div>
 <script type="text/javascript">
     CKEDITOR.replace('invoice_destinatario', { toolbar: 'Mini', height: 200, width: 450 });
+    CKEDITOR.replace('invoice_footer', { toolbar: 'Mini', height: 200, width: 450 });
+    CKEDITOR.replace('invoice_mittente', { toolbar: 'Mini', height: 200, width: 450 });
 </script>
