--- a/app/views/invoices/invoice_to_pdf.erb
+++ b/app/views/invoices/invoice_to_pdf.erb
@@ -1,131 +1,1 @@
-<style type="text/css">
-    .ipage {
-        width: 100%;
-        border: solid 2px #daddf7;
-    }
-
-    .icentre {
-        width: 50%;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .ipad {
-        padding: 0 3%;
-
-    }
-
-    .ipadtab {
-        padding: 0 2% 0 12%;
-
-    }
-
-    table {
-        border: 2px;
-    }
-
-</style>
-
-<div class="ipage">
-  <%=  @invoice.mittente %>
-  <div class="ipad" style="border: dotted 1px #c55404 ">
-    <table>
-      <tr>
-        <td style="width: 80%">
-          <%= @invoice.destinatario %>
-
-        </td>
-        <td style="width: 20%"> fattura n. <%= @invoice.numero_fattura.to_s + ' / ' + @invoice.sezione.to_s %> <br/>
-          del  <%= I18n.localize(@invoice.data_fattura.to_date, :format => :giorno_mese_anno_barra) %></td>
-      </tr>
-    </table>
-  </div>
-  <div class="icentre" style="border: dotted 1px #9fff3c">
-    <% unless @invoice.user.nil? %>
-        <table>
-          <tr>
-            <td>cod. utente</td>
-            <td><%= @invoice.user.id.to_s %></td>
-          </tr>
-          <tr>
-            <td>Cognome e nome</td>
-            <td><%= @invoice.user.lastname unless @invoice.user.lastname.blank? %>
-              &nbsp; <%= @invoice.user.firstname unless @invoice.user.firstname.blank? %>
-            </td>
-          </tr>
-          <% unless @invoice.user.titolo.blank? || @invoice.user.titolo.nil? %>
-              <tr>
-                <td>qualifica</td>
-                <td><%= @invoice.user.titolo.to_s %></td>
-              </tr>
-          <% end %>
-          <% unless @invoice.user.mail.blank? || @invoice.user.mail.nil? %>
-              <tr>
-                <td>e-mail</td>
-                <td><%= @invoice.user.mail.to_s %></td>
-              </tr>
-          <% end %>
-        </table>
-    <% end %>
-
-  </div>
-  <div class="ipad">
-    <table border="2" style="border-collapse: separate;">
-      <thead>
-      <tr>
-        <th style="width: 80%">Descrizione</th>
-        <th style="width: 20%">Totale</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-        <td>
-          <%= @invoice.description %>
-          <span class="ipadtab">
-
-         <b>Abbonamento per l'anno: <%= @invoice.anno.to_s unless @invoice.anno.blank? %>&nbsp; scadenza:
-            <% unless @invoice.user.nil? %>
-                <%= I18n.localize(@invoice.user.datascadenza.to_date, :format => :giorno_mese_anno_barra) %>
-            <% end %>
-            <% unless @invoice.convention.nil? %>
-                <%= I18n.localize(@invoice.convention.data_scadenza.to_date, :format => :giorno_mese_anno_barra) %>
-            <% end %>
-          </b></span>
-        </td>
-      </tr>
-      <tr>
-        <td class="ipadtab"> tariffa ordinaria</td>
-        <td><%= @tariffa.to_s %></td>
-      </tr>
-      <tr>
-        <td class="ipadtab">- sconto <%= @scontoperc.to_s %> %</td>
-        <td><%= @sconto %></td>
-      </tr>
-      <tr>
-        <td class="ipadtab">IMPONIBILE <%= @imponibile.to_s %></td>
-        <td><%= @sconto %></td>
-      </tr>
-      <tr>
-        <td class="ipadtab">IVA  <%= @impostaperce.to_s %> %</td>
-        <td><%= @imposta %></td>
-      </tr>
-      <tr>
-        <td class="ipadtab">TOTALE FATTURA</td>
-        <td><%= @totale %></td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
-  <br/>
-
-  <div class="icentre">
-    <h4>pagamento</h4>
-
-    <p>Effettuato a mezzo: <%= @invoice.payment.pagamento %></p>
-  </div>
-  <br/>
-  <hr>
-  <br/>
-  <%= Setting.default_invoices_footer %>
-</div>
+<%= render :partial => "show_invoice_html" %>
