--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -19,8 +19,8 @@
       <tbody>
       <% @invoices.each do |invoice| %>
           <tr class="<%= cycle 'odd', 'even' %>">
-<!--
-<<<<<<< HEAD
+
+            <!-- <<<<<<< HEAD   -->
 
             <td align="center"><%= link_to h(invoice.numero_fattura), invoice_path(invoice, :user_id => invoice.user_id, :convention_id => invoice.convention_id) %></td>
             <% if  invoice.user.nil? && invoice.convention.nil? %>
@@ -29,20 +29,22 @@
             <% else %>
                 <td align="left"><%= link_to h(invoice.user), user_path(invoice.user, :id => invoice.user_id) %></td>
                 <td align="left"><%= link_to h(invoice.convention), conventions_path(invoice.convention, :id => invoice.convention_id) %></td>
-             <% end %>
+            <% end %>
             <td align="center"><%= format_date(invoice.data_fattura) %></td>
             <td align="center"><%= h invoice.anno %></td>
             <td class="buttons"><%= link_to('', invoice_download_pdf_path(invoice.id), :target => '_blank', :class => 'icon icon-file application-pdf') %></td>
+            <!--
 =======
--->
+
             <td><%= link_to h(invoice.numero_fattura), invoice_path(invoice) %></td>
             <td><%= link_to h(invoice.user), user_path(invoice.user, :id => invoice.user_id) %></td>
             <td align="left"><%= format_date(invoice.data_fattura) %></td>
             <td align="right"><%= h invoice.anno %></td>
             <td align="right"><%= h invoice.tariffa %></td>
-            <td align="left"><%= h invoice.payment.abbrev %></td>
-            <td class="buttons"><%= link_to('', invoice_download_pdf_path(invoice.id),:target => '_blank', :class => 'icon icon-file application-pdf') if User.current.admin? %></td>
-<!-- >>>>>>> 8ea78bf5a18bebb2e75866902e8991983fa18b7e  -->
+            <td align="left"><%# h invoice.payment.abbrev %></td>
+            <td class="buttons"><%= link_to('', invoice_download_pdf_path(invoice.id), :target => '_blank', :class => 'icon icon-file application-pdf') if User.current.admin? %></td>
+ >>>>>> 8ea78bf5a18bebb2e75866902e8991983fa18b7e  -->
+
             <td class="buttons"><%= link_to('', edit_invoice_path(invoice), :class => 'icon icon-edit') if User.current.admin? %></td>
             <td class="buttons"><%= link_to('', invoice, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del') if User.current.admin? %></td>
 
