--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,184 +1,38 @@
+<h2><%= link_to l(:label_invoice), invoices_path %> &#187; <%= h(@invoice) %></h2>
 <style type="text/css">
-    .ipage {
-        width: 595px;
-        border: solid 2px #daddf7;
-    }
 
-    .icentre {
-        width: 50%;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
+    #ipage {
+        position: relative;
+        height: 100%;
+        width: 90%;
+        padding: 2%;
+        margin-left: -3% ;
+        -webkit-box-shadow: 1px 6px 22px rgba(50, 50, 50, 1);
+        -moz-box-shadow: 1px 6px 22px rgba(50, 50, 50, 1);
+        box-shadow: 1px 6px 22px rgba(50, 50, 50, 1);
+        }
 
-    .ipad {
-        padding: 0 3%;
+    #iwrapper {
+        position: relative;
+        height: 100%;
+        margin: 0 auto;
+        padding: 1% 5% 3%;
+        width: 100%;
+     }
 
-    }
 
-    .ipadtab {
-        padding: 0 2% 0 12%;
-
-    }
-
-    table {
-        border: 2px;
-    }
-
-<<<<<<< HEAD
 </style>
-=======
-    <p>
-      <%= l(:label_iva) %>: <%= h @invoice.iva %>
-    </p>
-
-    <p>
-      <%= l(:label_pagamento) %>: <%= h @invoice.payment %>
-    </p>
-  </fieldset>
+<div id="iwrapper">
+  <div id="ipage">
+    <%= render :partial => "show_invoice_html" %>
+  </div>
 </div>
->>>>>>> 8ea78bf5a18bebb2e75866902e8991983fa18b7e
-
-<div class="ipage">
-  <%=  @invoice.mittente %>
-  <div class="ipad">
-    <table>
-      <tr>
-        <td style="width: 75%">
-          <%= @invoice.destinatario %>
-
-        </td>
-        <td style="width: 25%"> fattura n. <%= @invoice.numero_fattura.to_s + ' / ' + @invoice.sezione.to_s %> <br/>
-          del  <%= I18n.localize(@invoice.data_fattura.to_date, :format => :giorno_mese_anno_barra) %></td>
-      </tr>
-<<<<<<< HEAD
-=======
-      <% @invoice.user.invoices.each do |user_invoice| %>
-          <tr>
-            <% if (user_invoice != @invoice) %>
-                <td class="buttons">
-                  <%= link_to(h(user_invoice.numero_fattura), invoice_path(user_invoice, :id => user_invoice.id), :class => 'icon icon-summary') if User.current.admin? %>
-            <% else %>
-                <td><b><%= h user_invoice.numero_fattura %></b></td>
-            <% end %>
-            </td>
-            <td><%= format_date(user_invoice.data_fattura) %></td>
-            <td><%= h user_invoice.anno %></td>
-            <td><%= h user_invoice.tariffa %></td>
-            <td><%= h user_invoice.payment.abbrev %></td>
-          </tr>
-      <% end %>
->>>>>>> 8ea78bf5a18bebb2e75866902e8991983fa18b7e
-    </table>
-  </div>
-  <div class="icentre">
-    <% unless @invoice.user.nil? %>
-        <table>
-          <tr>
-            <td>cod. utente</td>
-            <td><%= @invoice.user.id.to_s %></td>
-          </tr>
-          <tr>
-            <td>Cognome e nome</td>
-            <td><%= @invoice.user.lastname unless @invoice.user.lastname.blank? %>
-              &nbsp; <%= @invoice.user.firstname unless @invoice.user.firstname.blank? %>
-            </td>
-          </tr>
-          <% unless @invoice.user.titolo.blank? || @invoice.user.titolo.nil? %>
-              <tr>
-                <td>qualifica</td>
-                <td><%= @invoice.user.titolo.to_s %></td>
-              </tr>
-          <% end %>
-          <% unless @invoice.user.mail.blank? || @invoice.user.mail.nil? %>
-              <tr>
-<<<<<<< HEAD
-                <td>e-mail</td>
-                <td><%= @invoice.user.mail.to_s %></td>
-=======
-                <% if (item != @invoice) %>
-                    <td class="buttons">
-                      <%= link_to(h(item.numero_fattura), invoice_path(item, :id => item.id), :class => 'icon icon-summary') if User.current.admin? %>
-                <% else %>
-                    <td><b><%= h item.numero_fattura %></b></td>
-                <% end %>
-                </td>
-                <td><%= format_date(item.data_fattura) %></td>
-                <td><%= h item.anno %></td>
-                <td><%= h item.tariffa %></td>
-                <td><%= h item.payment.abbrev %></td>
->>>>>>> 8ea78bf5a18bebb2e75866902e8991983fa18b7e
-              </tr>
-          <% end %>
-        </table>
-    <% end %>
-
-  </div>
-  <div class="ipad">
-    <table border="2" style="border-collapse: separate;">
-      <thead>
-      <tr>
-        <th style="width: 80%">Descrizione</th>
-        <th style="width: 20%">Totale</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-        <td>
-          <%= @invoice.description %>
-          <span class="ipadtab">
-
-         <b>Abbonamento per l'anno: <%= @invoice.anno.to_s unless @invoice.anno.blank? %>&nbsp; scadenza:
-           <% unless @invoice.user.nil? %>
-               <%= I18n.localize(@invoice.user.datascadenza.to_date, :format => :giorno_mese_anno_barra) %>
-           <% end %>
-           <% unless @invoice.convention.nil? %>
-               <%= I18n.localize(@invoice.convention.data_scadenza.to_date, :format => :giorno_mese_anno_barra) %>
-           <% end %>
-         </b></span>
-        </td>
-      </tr>
-      <tr>
-        <td class="ipadtab"> tariffa ordinaria</td>
-        <td><%= "%.2f" % @tariffa.to_s %></td>
-      </tr>
-      <tr>
-        <td class="ipadtab">- sconto <%=  @scontopercent.to_s %> %</td>
-        <td><%= "%.2f" %  @sconto %></td>
-      </tr>
-      <tr>
-        <td class="ipadtab">IMPONIBILE </td>
-        <td><%= "%.2f" %  @imponibile %></td>
-      </tr>
-      <tr>
-        <td class="ipadtab">IVA  <%=  @impostapercent.to_s %> %</td>
-        <td><%= "%.2f" %  @imposta %></td>
-      </tr>
-      <tr>
-        <td class="ipadtab">TOTALE FATTURA</td>
-        <td><%= "%.2f" % @totale %></td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
-  <br/>
-
-  <div class="icentre">
-    <h4>pagamento</h4>
-
-    <p>Effettuato a mezzo: <%= @invoice.payment %></p>
-  </div>
-  <br/>
-  <hr>
-  <br/>
-  <%= Setting.default_invoices_footer %>
-</div>
-<<<<<<< HEAD
-=======
 <div class='btn-footer'>
   <%= link_to l(:button_issue_empty), edit_invoice_path(@invoice), :class => 'button-grey' %>
   &nbsp;&nbsp;&nbsp;&nbsp;
-  <%= link_to l(:label_download_pdf), invoice_download_pdf_path(@invoice.id ), :class => 'button-blu' %>
-  <%= link_to l(:label_view), invoice_to_pdf_path(@invoice.id), :class => 'button-grey' %>
+  <%= link_to l(:label_create_pdf), invoice_download_pdf_path(@invoice.id), :class => 'button-blu', :target => '_blank' %>
+  <% unless  @file_pdf.nil? %>
+      <p id="pdf_link"><%= link_to "show me not nill  Invoice (PDF)", @file_pdf %></p>
+  <% end %>
 </div>
->>>>>>> 8ea78bf5a18bebb2e75866902e8991983fa18b7e
+
