--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -1,7 +1,8 @@
 <%= f.error_messages %>
-
+<h1><%=  @user_id.to_s  %></h1>
 <div class="box tabular">
   <%= f.hidden_field :user_id, :value => @user_id %>
+
   <%= f.hidden_field :convention_id, :value => @convention_id %>
   <%# f.hidden_field :mittente, :value =>  Setting.default_invoices_header  %>
 
