--- a/app/views/invoices/_show_invoice_html.erb
+++ b/app/views/invoices/_show_invoice_html.erb
@@ -169,7 +169,7 @@
     </tr>
     <tr>
       <td class="legends"> <span> tariffa ordinaria</span></td>
-      <td class="legendsnum"><span>&euro;&nbsp;<%= "%.2f" % @tariffa.to_s %></span></td>
+      <td class="legendsnum"><span>&euro;&nbsp;<%= "%.20f" % @tariffa %></span></td>
     </tr>
     <tr>
       <td class="legends"><span>- sconto <%= @scontopercent.to_s %> %</span></td>
