images errors in layout: sostitution

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -42,8 +42,8 @@ img { border: none; margin: 0; }
             </p>
             <table width="200" align="right" border="0" cellspacing="5" cellpadding="5">
               <tr>
-                <td><a href="#"><img src="<%= defurl %>/images/fwd.gif" border="0" /></a></td>
-                <td><a href="#"><img src="<%= defurl %>/images/sub.gif" border="0" /></a></td>
+                <td><a href="#"><img src="<%= defurl %>/images/ico/home_no.gif" border="0" /></a></td>
+                <td><a href="#"><img src="<%= defurl %>/images/ico/home_yes.gif" border="0" /></a></td>
               </tr>
             </table>
             <br>
@@ -51,7 +51,7 @@ img { border: none; margin: 0; }
             <p style='font-family: "Segoe UI", arial,  helvetica, sans-serif;font-size: 12px;color: #666666;'>&nbsp;<%# content 02%></p>
             <table width="100%" align="center" cellpadding="5" cellspacing="5" style="border: #666666 1px solid;">
               <tr>
-                <td width="2%"><img src="<%= defurl %>/images/person.gif"></td>
+                <td width="2%"><img src="<%= defurl %>/images/ico/fs.png"></td>
                 <td width="98%"><p style='font-family: "Segoe UI", arial,  helvetica, sans-serif;font-size: 12px;color: #666666;'><a target="_blank" href="<%= editorial_url %>" >Vai a <%= Setting.app_title %> </a><%# auto_link(editorial_url) %></p></td>
               </tr>
             </table>
